<resources>
    <string name="app_name">appCursoVeloxEstatusAlumno</string>
    <string name="txt_view_String">Estatus del Alumno</string>
    <string name="txt_matematicas_String">Matemáticas</string>
    <string name="txt_fisica_String">Física</string>
    <string name="txt_quimica_String">Química</string>
    <string name="btn_Calcular_Promedio_String">Calcular Promedio</string>
    <string name="txt_resultado_String">Resultado</string>
    <string name="mensaje">Por favor, ingrese un valor en todos los campos,\n<b>para poder realizar el cálculo.</b>!</string>
    <string name="txt_aprobado"><b><big>Aprobado</big></b></string>
    <string name="txt_suspendido"><b><big>Suspendido</big></b></string>
    <string name="txt_resultado">con un <big>%1$s</big></string>


</resources>